@@ -2,6 +2,8 @@ changelog
 
 === next
 
++ Option to mention all in replies.
+
 + Reduce interference between various text substitution rules.
 
 + Fix crash in search with extra space.
